--- a/index.html
+++ b/index.html
@@ -11,29 +11,12 @@
       width: 100%;
       height: 100%;
       font-family: Arial, sans-serif;
-      background: radial-gradient(circle at top, #1f1f1f, #0d0d0d);
+      background: linear-gradient(to bottom right, #101010, #000000);
       color: #fff;
       text-align: center;
-      overflow: hidden;
-    }
-
-    #tsparticles {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-    }
-
-    .wrapper {
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 100%;
-      width: 100%;
-      position: relative;
-      z-index: 1;
     }
 
     .container {
@@ -59,6 +42,8 @@
       border: none;
       border-radius: 6px;
       cursor: pointer;
+      background-color: #00d084;
+      color: #000;
       transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
 
@@ -70,11 +55,6 @@
     button:disabled {
       background-color: #444;
       cursor: not-allowed;
-    }
-
-    #genBtn {
-      background-color: #00d084;
-      color: #000;
     }
 
     #keyDisplay, #timeLeft, #copiedMessage {
@@ -97,51 +77,14 @@
 </head>
 <body>
 
-  <!-- Particle background -->
-  <div id="tsparticles"></div>
-
-  <!-- Content wrapper -->
-  <div class="wrapper">
-    <div class="container">
-      <h1>🔐 Ahtesham Pc Booster License Key Generator</h1>
-      <button id="genBtn" onclick="requestLicense()">Generate License Key</button>
-      <div id="keyDisplay"></div>
-      <div id="copiedMessage"></div>
-      <div id="timeLeft" style="color: #ccc;"></div>
-    </div>
+  <div class="container">
+    <h1>🔐 Ahtesham Pc Booster License Key Generator</h1>
+    <button id="genBtn" onclick="requestLicense()">Generate License Key</button>
+    <div id="keyDisplay"></div>
+    <div id="copiedMessage"></div>
+    <div id="timeLeft" style="color: #ccc;"></div>
   </div>
 
-  <!-- tsParticles CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/tsparticles@3.0.3/tsparticles.bundle.min.js"></script>
-
-  <!-- tsParticles config -->
-  <script>
-    tsParticles.load("tsparticles", {
-      fullScreen: {
-        enable: false
-      },
-      background: {
-        color: "#0d0d0d"
-      },
-      particles: {
-        number: {
-          value: 70,
-          density: { enable: true, area: 800 }
-        },
-        color: { value: "#00ffff" },
-        shape: { type: "circle" },
-        opacity: { value: 0.4 },
-        size: { value: { min: 1, max: 3 } },
-        move: {
-          enable: true,
-          speed: 1,
-          outModes: { default: "out" }
-        }
-      }
-    });
-  </script>
-
-  <!-- License Key Script -->
   <script>
     window.onload = function () {
       const savedKey = localStorage.getItem("key");
@@ -234,9 +177,9 @@
 
         let timeStr = "⏳ Time left: ";
         if (days > 0) {
-          timeStr += `${days}d ${hours}h ${minutes}m`;
+          timeStr += `${days}d ${hours}h ${minutes}m ${seconds}s`;
         } else if (hours > 0) {
-          timeStr += `${hours}h ${minutes}m`;
+          timeStr += `${hours}h ${minutes}m ${seconds}s`;
         } else {
           timeStr += `${minutes}m ${seconds}s`;
         }
@@ -245,5 +188,6 @@
       }, 1000);
     }
   </script>
+
 </body>
 </html>
